--- a/src/public/css/cyberdyne.css
+++ b/src/public/css/cyberdyne.css
@@ -15,6 +15,12 @@
 
 @font-face
 {
+    font-family: 'cyberdyne expanded';
+    src: url('cyberdynexpand.ttf') format('truetype');
+}
+
+@font-face
+{
     font-family: 'cyberdyne outline';
     src: url('cyberdyneout.ttf') format('truetype');
 }
