--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -273,75 +273,75 @@ code {
 
 .headerArena {
   display: grid;
-  grid-template-columns: 285px 350px 250px;
+  grid-template-columns: 210px 350px 210px;
 }
-.headerArena .leftSide {
+.headerArena .headerArena-leftSide {
   width: 160px;
-  margin-left: 90px;
+  margin-left: 30px;
   margin-top: 20px;
 }
-.headerArena .leftSide .inputS .inputS-children p {
+.headerArena .headerArena-leftSide .inputS .inputS-children p {
   color: inherit;
 }
-.headerArena .leftSide .inputS .inputS_imgLeft {
+.headerArena .headerArena-leftSide .inputS .inputS_imgLeft {
   width: 25px;
   height: 26px;
   left: 20px;
   top: 7px;
 }
-.headerArena .leftSide .inputS p {
+.headerArena .headerArena-leftSide .inputS p {
   text-align: center;
   line-height: 42px;
 }
-.headerArena .leftSide .inputS .inputS-outline {
+.headerArena .headerArena-leftSide .inputS .inputS-outline {
   height: 50px;
   transform: rotateY(180deg);
 }
-.headerArena .center {
+.headerArena .headerArena-center {
   position: relative;
   width: 345px;
   height: 129px;
   margin: 0 auto;
   z-index: 100;
 }
-.headerArena .center .headerArena-csgo {
+.headerArena .headerArena-center .headerArena-csgo {
   position: absolute;
   z-index: 200;
   left: calc(50% - 152px / 2);
   top: 25px;
 }
-.headerArena .center .headerArena-trapeze {
+.headerArena .headerArena-center .headerArena-trapeze {
   position: absolute;
   z-index: 100;
 }
-.headerArena .rightSide {
+.headerArena .headerArena-rightSide {
   width: 160px;
   margin-top: 20px;
   margin-left: 20px;
 }
-.headerArena .rightSide .inputS .inputS_imgRight {
+.headerArena .headerArena-rightSide .inputS .inputS_imgRight {
   right: 20px;
   top: 7px;
 }
-.headerArena .rightSide .inputS .nickName {
+.headerArena .headerArena-rightSide .inputS .nickName {
   margin-top: 5px;
 }
-.headerArena .rightSide .inputS .cash {
+.headerArena .headerArena-rightSide .inputS .cash {
   margin-top: 20px;
 }
-.headerArena .rightSide .inputS .inputS_imgLeft {
+.headerArena .headerArena-rightSide .inputS .inputS_imgLeft {
   width: 25px;
   height: 23px;
   left: 20px;
   top: 7px;
 }
-.headerArena .rightSide .inputS p {
+.headerArena .headerArena-rightSide .inputS p {
   font-family: "cyberdyne condensed";
   text-align: right;
   padding-right: 55px;
   font-size: 13px;
 }
-.headerArena .rightSide .inputS .inputS-outline {
+.headerArena .headerArena-rightSide .inputS .inputS-outline {
   height: 50px;
 }
 
@@ -428,12 +428,12 @@ code {
 
 .headerPersonal {
   display: grid;
-  grid-template-columns: 185px 70px 250px 100px calc(100% - (185px + 70px + 250px + 100px) - 20px * 4);
+  grid-template-columns: 115px 70px 250px 100px calc(100% - (115px + 70px + 250px + 100px) - 20px * 4);
   grid-gap: 15px;
 }
 .headerPersonal .side1 {
   margin-top: 20px;
-  margin-left: 95px;
+  margin-left: 25px;
 }
 .headerPersonal .side1 .inputS .inputS_imgLeft {
   width: 25px;
@@ -1866,6 +1866,8 @@ code {
 }
 .arena .arena__leaders .leaders {
   height: 300px;
+  position: relative;
+  top: -25px;
 }
 .arena .arena__leaders .leaders .leader {
   width: 75px;
@@ -2132,10 +2134,17 @@ code {
   position: relative;
   width: 200px;
   height: 100%;
+  overflow: hidden;
+}
+.right .rightBar:hover {
+  margin-left: 0px;
+  transition: 0.5s ease-in-out;
 }
 .right .rightBar {
   width: 200px;
   height: 494px;
+  margin-left: 175px;
+  transition: 0.5s ease-in-out;
 }
 .right .rightBar .header, .right .rightBar .content, .right .rightBar .footer {
   width: 100%;
