--- a/src/public/scss/style.scss
+++ b/src/public/scss/style.scss
@@ -2245,7 +2245,7 @@ code {
       height: 300px;
       position: relative;
       top: -25px;
-      
+
       .leader {
         width: 75px;
         height: 90px;
@@ -2652,6 +2652,7 @@ code {
 
   .flexible-modal-drag-area{
     height: 50px;
+    width: 250px!important;
     position:absolute;
     right:0;
     top:0;
